--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
+body {
+	/* No highlight on text */
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently not supported by any browser */
+}
+
+
+.results {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 3vw 0;
+	font-size: 9vw;
+	color: red;
+	text-shadow: 1px 1px black;
+	z-index: -1;
+	text-align: center;
+}
 
 .position-absolute-choice1 {
     position: absolute;
@@ -56,4 +80,26 @@
     text-shadow: 1px 1px black;
     z-index: -1;
     text-align: center;
+}
+
+img {
+    display:block;
+    margin: 0px auto;
+}
+
+.choices1 {
+    width: 100%;
+    display: table;
+}
+
+.choices2 {
+    width: 100%;
+    display: table;
+}
+
+.tablecell {
+    vertical-align: middle;
+    display: table-cell;
+    max-width: 100%;
+    object-fit: scale-down;
 }
