Fixed winner message so that it will appear on both user screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,11 +83,12 @@ body {
 }
 
 .rps-selection-panel {
-    height: 150px;
+    height: 175px;
 }
 
 .message_body {
-    height: 300px;
+    height: 150px;
+    overflow-y: scroll;
     overflow-wrap: break-word;
 }
 
